testcases/error/unevaluable_value_reset_value.veryl
module unevaluable_value_reset_value {
    let a  : logic = 1;
    var b  : logic;
    let clk: clock = 1;
    let rst: reset = 1;

    always_ff {
        if_reset {
            b = a;
        }
    }
}
